packages/typ/tests/fixtures/diagnostics/0859_polyvar_duplicate_tag_conflict_10.ml.expected
File "0859_polyvar_duplicate_tag_conflict_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0859_polyvar_duplicate_tag_conflict_10 is not a valid module name.

File "0859_polyvar_duplicate_tag_conflict_10.ml", line 1, characters 16-42:
1 | let bad_kappa : [ `A of int | `A of bool ] -> int =
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This variant type contains a constructor [ `A of bool ]
       which should be [ `A of int ]
