packages/typ/tests/fixtures/diagnostics/0859_polyvar_duplicate_tag_conflict_10.ml
let bad_kappa : [ `A of int | `A of bool ] -> int =
  fun _ -> 9
